# DI4---QT

./: .gitignore
Projet/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  Customer.cpp  Customer.h  DBConnect.cpp  DBConnect.h  Login.cpp  Login.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyDateItemDelegate.cpp  MyDateItemDelegate.h  MyDateSortFilterProxyModel.cpp  MyDateSortFilterProxyModel.h  MySqlTableModel.cpp  NewCustomerDialog.cpp  NewCustomerDialog.h  NewCustomerDialog.ui  NewDtaffDialog.h  NewOtherDialog.cpp  NewOtherDialog.h  NewOtherDialog.ui  NewStaffDialog.cpp  NewStaffDialog.ui  Projet.pro  README.txt  ResourceType.cpp  ResourceType.h  RessourceItem.cpp  RessourceItem.h  RessourceType.cpp  RessourceType.h  Schedule.cpp  Schedule.h  Staff.cpp  Staff.h  StaffItem.cpp  (+53 more)
Projet/about/: AboutDialog.ui
Projet/customer/: Customer.cpp  Customer.h  NewCustomerDialog.h
Projet/database/: DBConnect.h
Projet/login/: Login.h
Projet/main/: MainWindow.cpp  MainWindow.h  MySqlTableModel.h
Projet/scheduler/: Schedule.cpp  Schedule.h  Timeline.cpp  Timeline.h
Projet/staff/: NewDtaffDialog.h  NewStaffDialog.ui  RessourceItem.cpp  RessourceType.h
QT/TP1/Introduction/: Introduction.pro  aproposdialog.cpp  dbconnect.cpp  dbconnect.h  dbconnect.h.autosave  login.cpp  login.h  login.ui  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newpatientdialog.cpp  newpatientdialog.cpp.autosave  newpatientdialog.h  newpatientdialog.ui  newstaffdialog.cpp  newstaffdialog.h  patient.cpp  patient.h  ressourceitem.cpp  ressourceitem.h  ressourcetype.cpp  ressourcetype.h  staff.cpp  staff.h  staffitem.cpp  staffitem.h
STL/: CMakeLists.txt  Ex1.cpp  Ex2.cpp  Ex3.cpp
STL/ex4/: Main.cpp  Patient.cpp  Patient.h  PatientFoncteur.cpp  PatientFoncteur.h  ScoreSort.cpp  ScoreSort.h  SortPat.cpp  SortPat.h
STL/ex5/: Center.cpp  Center.h  FoncteurAssignSlot.cpp  FoncteurAssignSlot.h  FoncteurFindSlot.cpp  FoncteurFindSlot.h  FoncteurScheduleRessource.cpp  FoncteurScheduleRessource.h  Main.cpp  Ressource.cpp  Ressource.h  Slot.cpp  Slot.h  Task.cpp  Task.h
build-Projet-Desktop_Qt_5_8_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  a.txt  base_tmp.sqli  object_script.Introduction.Debug  object_script.Introduction.Release  ui_aproposdialog.h  ui_login.h  ui_mainwindow.h  ui_newpatientdialog.h  ui_newstaffdialog.h
build-Projet-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/: moc_aproposdialog.cpp  moc_login.cpp  moc_mainwindow.cpp  moc_newpatientdialog.cpp  moc_newstaffdialog.cpp  moc_patient.cpp  moc_staff.cpp  qrc_resources.cpp
